--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -371,3 +371,47 @@
 .scale-transition.scale-in { transform: scale(1); }
 
 /* style float button */
+
+/*              painel collapse                     */
+
+.panel-group{
+  border: 0px transparent;
+  z-index: 3;
+  position: fixed;
+  width: 100%;
+  top: 180px;
+  margin-bottom: 5px;
+  background-color: transparent;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+}
+
+/* .panel-group .panel{
+  background-color: white;
+} */
+
+.panel-group .panel .panel-body{
+  background-color: #64b4f6;
+  width: 100%;
+}
+
+.panel-group .panel h4{
+  margin-top: 15px;
+  color: white;
+}
+
+.panel-group input{
+  padding-left: 28px;
+  text-align: left;
+  height: 26px;
+  width: 100px;
+  margin: 15px 10px 25px 10px; /* top right bottom left*/
+}
+
+.iconInput { position: relative;}
+.iconInput input { padding-left: 28px }
+.iconInput i { position: absolute; padding: 20px 10px; margin-left: 3px; color:grey }
+.form-inline a{color: white}
+.collapse #btn-up{padding: 1px 0 0 96%}
+
+
+/*               painel collapse              */
